Added alternative write method